WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166466
Using Option::breakOnThrow() shouldn't crash while printing a null CodeBlock.
https://bugs.webkit.org/show_bug.cgi?id=166466
Summary
Using Option::breakOnThrow() shouldn't crash while printing a null CodeBlock.
Mark Lam
Reported
2016-12-23 11:17:24 PST
Patch coming.
Attachments
proposed patch.
(1.36 KB, patch)
2016-12-23 11:19 PST
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-12-23 11:19:38 PST
Created
attachment 297719
[details]
proposed patch.
Keith Miller
Comment 2
2016-12-23 11:21:41 PST
Comment on
attachment 297719
[details]
proposed patch. r=me. Semi-related nit but I feel like that option should be named crash on throw.
WebKit Commit Bot
Comment 3
2016-12-23 11:46:31 PST
Comment on
attachment 297719
[details]
proposed patch. Clearing flags on attachment: 297719 Committed
r210139
: <
http://trac.webkit.org/changeset/210139
>
WebKit Commit Bot
Comment 4
2016-12-23 11:46:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug