Using Option::breakOnThrow() shouldn't crash while printing a null CodeBlock. https://bugs.webkit.org/show_bug.cgi?id=166466

Reviewed by Keith Miller.

* runtime/VM.cpp:
(JSC::VM::throwException):


Canonical link: https://commits.webkit.org/183743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210139 268f45cc-cd09-0410-ab3c-d52691b4dbfc